# yam

./: .env.template  Dockerfile  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml
chart/: admin.py  cron.py  models.py  urls.py  views.py
chart/management/commands/: get_chart.py
chart/migrations/: 0001_initial.py
chart/static/chart/css/: chart.css
chart/templates/chart/: chart.html
yam/: asgi.py  settings.py  urls.py  wsgi.py
